favorited game text wraps correctly on profile

--- a/src/css/FavGameCard.css
+++ b/src/css/FavGameCard.css
@@ -4,3 +4,8 @@
     max-width: 175px;
     height: 125px;
 }
+
+.fav-game-name{
+    word-wrap: break-word;
+    max-width: 175px;
+}
